; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/events/extr_core.c___perf_event_init_context.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/events/extr_core.c___perf_event_init_context.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.perf_event_context = type { i32, i32, i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.perf_event_context*)* @__perf_event_init_context to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__perf_event_init_context(%struct.perf_event_context* %0) #0 {
  %2 = alloca %struct.perf_event_context*, align 8
  store %struct.perf_event_context* %0, %struct.perf_event_context** %2, align 8
  %3 = load %struct.perf_event_context*, %struct.perf_event_context** %2, align 8
  %4 = getelementptr inbounds %struct.perf_event_context, %struct.perf_event_context* %3, i32 0, i32 5
  %5 = call i32 @spin_lock_init(i32* %4)
  %6 = load %struct.perf_event_context*, %struct.perf_event_context** %2, align 8
  %7 = getelementptr inbounds %struct.perf_event_context, %struct.perf_event_context* %6, i32 0, i32 4
  %8 = call i32 @mutex_init(i32* %7)
  %9 = load %struct.perf_event_context*, %struct.perf_event_context** %2, align 8
  %10 = getelementptr inbounds %struct.perf_event_context, %struct.perf_event_context* %9, i32 0, i32 3
  %11 = call i32 @INIT_LIST_HEAD(i32* %10)
  %12 = load %struct.perf_event_context*, %struct.perf_event_context** %2, align 8
  %13 = getelementptr inbounds %struct.perf_event_context, %struct.perf_event_context* %12, i32 0, i32 2
  %14 = call i32 @INIT_LIST_HEAD(i32* %13)
  %15 = load %struct.perf_event_context*, %struct.perf_event_context** %2, align 8
  %16 = getelementptr inbounds %struct.perf_event_context, %struct.perf_event_context* %15, i32 0, i32 1
  %17 = call i32 @INIT_LIST_HEAD(i32* %16)
  %18 = load %struct.perf_event_context*, %struct.perf_event_context** %2, align 8
  %19 = getelementptr inbounds %struct.perf_event_context, %struct.perf_event_context* %18, i32 0, i32 0
  %20 = call i32 @atomic_set(i32* %19, i32 1)
  ret void
}

declare dso_local i32 @spin_lock_init(i32*) #1

declare dso_local i32 @mutex_init(i32*) #1

declare dso_local i32 @INIT_LIST_HEAD(i32*) #1

declare dso_local i32 @atomic_set(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
